Smarter preload links

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -15,10 +15,9 @@ html( lang="en" )
     meta( name="app#le-mobile-web-app-title" content="Logux" )
     meta( name="description" content="Logux is a client-server communication tool for collaborative web applications with optimistics UI, offline first and live updates" )
     script( defer src="/common.js" )
-    script( defer src="/guide.js" )
+    script( defer src="/switcher.js" )
     link( rel="stylesheet" href="/common.sss" )
-    link( rel="stylesheet" href="/guide.sss" )
-    link( rel="stylesheet" href="/api.sss" )
+    link( rel="stylesheet" href="/switcher.sss" )
     meta( property="og:image" content="/base/og.png" )
     link( rel="preconnect" href="https://sidecar.gitter.im/" media="(min-width:941px)" )
   body.layout
