--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -205,7 +205,7 @@ html( lang="en" )
             td Do not show warning when using <code class="code">ws://</code> in production
         h3#returns.title
           a.title_link( href="#returns" title="Direct link to section" ) Returns
-        p.text_block <code><a href="#">Promise</a>&lt;<a href="#">boolean</a></code>
+        p.text_block <code><a href="#">Promise</a>&lt;<a href="#">boolean</a>&gt;</code>
         hr.line
 
       article.text
