--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -141,7 +141,9 @@ html( lang="en" )
             ul.list
               li
                 p.text_block The #[code.code standard Redux] way to dispatch actions. Action will not be sent to the server or another browser tab. There is no way to set action’s meta in this method.
-                pre.code-block server.undo(meta, <span class="code-block_string">'too late'</span>)
+                pre.code-block
+                  :lowlight( lang="javascript" prefix="code-block_" )
+                    server.undo(meta, 'too late')
               li
                 p.text_block #[code.code preadd]: action is going to be added to the log. It is the only way to set #[a.code(href="#") #[code meta.reasons]]. This event will not be called for cross-tab actions added in a different browser tab.
             p.text_block To stop the server press #[kbd.code Ctrl]+#[kbd.code C] on Linux and Windows.
@@ -159,21 +161,22 @@ html( lang="en" )
         +switcher('Node.js', 'Ruby on Rails', 'Any other HTTP server')
           +switcher_section
             p.text_block Using Logux Server
-            pre.code-block.
-              <span class="code-block_keyword">const</span> { Server } = <span class="code-block_built_in">require</span>(<span class="code-block_string">'@logux/server'</span>)
+            pre.code-block
+              :lowlight( lang="javascript" prefix="code-block_" )
+                const { Server } = require('@logux/server')
 
-              <span class="code-block_function"><span class="code-block_keyword">function</span> <span class="code-block_title">usersReducers</span> (<span class="code-block_params">state = { }, action</span>) </span>{
-                <span class="code-block_keyword">if</span> (action.type === <span class="code-block_string">'user/name'</span>) {
-                  <span class="code-block_keyword">return</span> { ...state, <span class="code-block_attr">name</span>: action.name }
-                } <span class="code-block_keyword">else</span> {
-                  <span class="code-block_keyword">return</span> state
+                function usersReducers (state = { }, action) {
+                  if (action.type === 'user/name') {
+                    return { ...state, name: action.name }
+                  } else {
+                    return state
+                  }
                 }
-              }
 
-              server.auth(<span class="code-block_function">(<span class="code-block_params">userId, token</span>) =&gt;</span> {
-                <span class="code-block_comment">// Allow only local users until we will have a proper authentication</span>
-                <span class="code-block_keyword">return</span> process.env.NODE_ENV === <span class="code-block_string">'development'</span>
-              })
+                server.auth((userId, token) => {
+                  // Allow only local users until we will have a proper authentication
+                  return process.env.NODE_ENV === 'development'
+                })
             p.text_block However, you can change this behavior and have event sourcing on the server too.
           +switcher_section
             p.text_block Use Logux Rails gem
