Revert scroll changes

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -80,6 +80,8 @@ html( lang="en" )
                 a.submenu_link( href="#" ) #lastId
               li
                 a.submenu_link( href="#" ) #nextLog()
+              li
+                a.submenu_link( href="#" ) #prevLog()
           li
             .submenu_text Core Concepts and Small Secrets
             ol
