Increase submenu hover area for scrollbar

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -52,6 +52,7 @@ html( lang="en" )
               | Join chat
               .menu_extra (10 people)
       .layout_submenu
+        .layout_submenu-hover-area
         ul.submenu
           li.is-flat
             a.submenu_link( href="#" ) Authentication
