Increase submenu hover area for scrollbar (#10)
* Increase submenu hover area for scrollbar

* fix

* Hide on mobile, fix pseudo

* Rename to layout_pad

* Refactor to use wrapper instead

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -51,71 +51,72 @@ html( lang="en" )
             a.menu_link.chat( href="https://gitter.im/logux/logux" rel="me" )
               | Join chat
               .menu_extra (10 people)
-      .layout_submenu
-        ul.submenu
-          li.is-flat
-            a.submenu_link( href="#" ) Authentication
-          li.is-flat
-            a.submenu_link( href="#" ) Scaling
+      .layout_pad
+        .layout_submenu
+          ul.submenu
+            li.is-flat
+              a.submenu_link( href="#" ) Authentication
+            li.is-flat
+              a.submenu_link( href="#" ) Scaling
 
-          li
-            .submenu_text Logux architecture
-            ol
-              li
-                a.submenu_link( href="#" ) Core Concepts
-              li
-                a.submenu_link.is-current Using Concepts in Practice
-              li
-                a.submenu_link( href="#" ) Comparing Logux with AJAX and GraphQL
-              li
-                a.submenu_link( href="#" ) Parts
-              li
-                a.submenu_link( href="#" ) Choosing Right Architecture
-          li
-            a.submenu_link( href="#" ) TestTime
-            ul
-              li
-                a.submenu_link( href="#" ) .getLog()
-              li
-                a.submenu_link( href="#" ) #lastId
-              li
-                a.submenu_link( href="#" ) #nextLog()
-              li
-                a.submenu_link( href="#" ) #prevLog()
-          li
-            .submenu_text Core Concepts and Small Secrets
-            ol
-              li
-                a.submenu_link( href="#" ) Nodes
-              li
-                a.submenu_link( href="#" ) Actions
-              li
-                a.submenu_link( href="#" ) Meta
-              li
-                a.submenu_link( href="#" ) Application State
-              li
-                a.submenu_link( href="#" ) Channels and Subscriptions
-              li
-                a.submenu_link( href="#" ) Cleaning Log and Action Reasons
-              li
-                a.submenu_link( href="#" ) Subprotocols
-          li
-            .submenu_text Core Concepts and Small Secrets
-            ol
-              li
-                a.submenu_link( href="#" ) Nodes
-              li
-                a.submenu_link( href="#" ) Actions
-              li
-                a.submenu_link( href="#" ) Meta
-              li
-                a.submenu_link( href="#" ) Application State
-              li
-                a.submenu_link( href="#" ) Channels and Subscriptions
-              li
-                a.submenu_link( href="#" ) Cleaning Log and Action Reasons
-              li
-                a.submenu_link( href="#" ) Subprotocols
+            li
+              .submenu_text Logux architecture
+              ol
+                li
+                  a.submenu_link( href="#" ) Core Concepts
+                li
+                  a.submenu_link.is-current Using Concepts in Practice
+                li
+                  a.submenu_link( href="#" ) Comparing Logux with AJAX and GraphQL
+                li
+                  a.submenu_link( href="#" ) Parts
+                li
+                  a.submenu_link( href="#" ) Choosing Right Architecture
+            li
+              a.submenu_link( href="#" ) TestTime
+              ul
+                li
+                  a.submenu_link( href="#" ) .getLog()
+                li
+                  a.submenu_link( href="#" ) #lastId
+                li
+                  a.submenu_link( href="#" ) #nextLog()
+                li
+                  a.submenu_link( href="#" ) #prevLog()
+            li
+              .submenu_text Core Concepts and Small Secrets
+              ol
+                li
+                  a.submenu_link( href="#" ) Nodes
+                li
+                  a.submenu_link( href="#" ) Actions
+                li
+                  a.submenu_link( href="#" ) Meta
+                li
+                  a.submenu_link( href="#" ) Application State
+                li
+                  a.submenu_link( href="#" ) Channels and Subscriptions
+                li
+                  a.submenu_link( href="#" ) Cleaning Log and Action Reasons
+                li
+                  a.submenu_link( href="#" ) Subprotocols
+            li
+              .submenu_text Core Concepts and Small Secrets
+              ol
+                li
+                  a.submenu_link( href="#" ) Nodes
+                li
+                  a.submenu_link( href="#" ) Actions
+                li
+                  a.submenu_link( href="#" ) Meta
+                li
+                  a.submenu_link( href="#" ) Application State
+                li
+                  a.submenu_link( href="#" ) Channels and Subscriptions
+                li
+                  a.submenu_link( href="#" ) Cleaning Log and Action Reasons
+                li
+                  a.submenu_link( href="#" ) Subprotocols
 
     .layout_float
       button.layout_open.button.is-square( title="Open menu" )
