--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -51,7 +51,7 @@ html( lang="en" )
             a.menu_link.chat( href="https://gitter.im/logux/logux" rel="me" )
               | Join chat
               .menu_extra (10 people)
-      .layout_pad
+      .layout_hover
         .layout_submenu
           ul.submenu
             li.is-flat
