Accessibility: add missing headings

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -60,7 +60,7 @@ html( lang="en" )
               a.submenu_link( href="#" ) Scaling
 
             li
-              .submenu_text Logux architecture
+              h2.submenu_text Logux architecture
               ol
                 li
                   a.submenu_link( href="#" ) Core Concepts
@@ -84,7 +84,7 @@ html( lang="en" )
                 li
                   a.submenu_link( href="#" ) #prevLog()
             li
-              .submenu_text Core Concepts and Small Secrets
+              h2.submenu_text Core Concepts and Small Secrets
               ol
                 li
                   a.submenu_link( href="#" ) Nodes
@@ -101,7 +101,7 @@ html( lang="en" )
                 li
                   a.submenu_link( href="#" ) Subprotocols
             li
-              .submenu_text Core Concepts and Small Secrets
+              h2.submenu_text Core Concepts and Small Secrets
               ol
                 li
                   a.submenu_link( href="#" ) Nodes
