--- a/src/branding.pug
+++ b/src/branding.pug
@@ -13,16 +13,16 @@ article.text
 
   h2 Logo with Name
   .asset
-    a( href="./logotype.svg" download )
+    a.asset_file( href="./logotype.svg" download )
       img( src="./logotype.svg" height="234" width="150" )
-    a( href="./logotype-dark.svg" download )
+    a.asset_file( href="./logotype-dark.svg" download )
       img.is-dark( src="./logotype-dark.svg" height="234" width="150" )
 
   h2 Logo
   .asset
-    a( href="./logo.svg" download )
+    a.asset_file( href="./logo.svg" download )
       img( src="./logo.svg" height="150" width="150" )
-    a( href="./logo-dark.svg" download )
+    a.asset_file( href="./logo-dark.svg" download )
       img.is-dark( src="./logo-dark.svg" height="150" width="150" )
   p.text_block #[a( href="https://twitter.com/antiflasher" ) Anton Lovchikov] created a logo that subtly references a #[a( href="https://www.youtube.com/watch?v=Qd8zT1YAUck" ) circular writing system] from the #[a( href="https://en.wikipedia.org/wiki/Arrival_(film)" ) Arrival] movie
 
