--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -14,7 +14,7 @@ html( lang="en" )
     link( rel="icon" href="/base/512.png" sizes="512x512" )
     link( rel="mask-icon" href="/base/pinned.svg" color="#ffc40d" )
     link( rel="apple-touch-icon" href="/base/apple.png" )
-    meta( name="app#le-mobile-web-app-title" content="Logux" )
+    meta( name="apple-mobile-web-app-title" content="Logux" )
     meta( name="description" content="Logux is a client-server communication tool for collaborative web applications with optimistics UI, offline first and live updates" )
     script( defer src="/common.js" )
     script( defer src="/switcher.js" )
