Add adaptive YouTube players

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -21,6 +21,7 @@ html( lang="en" )
     link( rel="stylesheet" href="/common.sss" )
     link( rel="stylesheet" href="/switcher.sss" )
     link( rel="stylesheet" href="/branding.sss" )
+    link( rel="stylesheet" href="/video.sss" )
     meta( property="og:image" content="/base/og.png" )
     link( rel="preconnect" href="https://sidecar.gitter.im/" media="(min-width:941px)" )
   body.layout
