Improve preconnect for YouTube preview

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -24,6 +24,9 @@ html( lang="en" )
     link( rel="stylesheet" href="/video.sss" )
     meta( property="og:image" content="/base/og.png" )
     link( rel="preconnect" href="https://sidecar.gitter.im/" media="(min-width:941px)" )
+    link( rel="preconnect" href="https://yt3.ggpht.com" )
+    link( rel="preconnect" href="https://i.ytimg.com" )
+    link( rel="preconnect" href="https://fonts.gstatic.com" )
   body.layout
     nav.layout_aside
       .layout_menu
