Add link to issues

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -56,6 +56,8 @@ html( lang="en" )
           li
             a.menu_link( href="https://github.com/logux" rel="me" ) GitHub
           li
+            a.menu_link( href="https://github.com/logux/logux/issues" ) Issues
+          li
             a.menu_link.chat( href="https://gitter.im/logux/logux" rel="me" )
               | Join chat
               .menu_extra (10 people)
