Try more radical favicon

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -8,10 +8,7 @@ html( lang="en" )
     meta( charset="utf-8" )
     title Logux.io UI Kit
     meta( name="viewport" content="width=device-width" )
-    link( rel="shortcut icon" href="/base/favicon.svg" type="image/svg+xml" sizes="any" )
-    link( rel="shortcut icon" href="/base/32.png" sizes="32x32" )
-    link( rel="icon" href="/base/192.png" sizes="192x192" )
-    link( rel="icon" href="/base/512.png" sizes="512x512" )
+    link( rel="icon" href="/base/favicon.svg" type="image/svg+xml" sizes="any" )
     link( rel="apple-touch-icon" href="/base/apple.png" )
     meta( name="apple-mobile-web-app-title" content="Logux" )
     meta( name="description" content="Logux is a client-server communication tool for collaborative web applications with optimistics UI, offline first and live updates" )
