--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -266,6 +266,6 @@ html( lang="en" )
           .footer_link: a( href="https://gitter.im/logux/logux" ) Gitter
           .footer_link: a( href="https://twitter.com/linguopunk" ) Linguopunk
         .footer_section.is-author
-          .footer_text Under the #[a( href="https://github.com/logux/logux.io/blob/master/LICENSE" rel="license" ) MIT] license
+          .footer_text Under the #[a( href="https://github.com/logux/logux.io/blob/main/LICENSE" rel="license" ) MIT] license
           .footer_text Sponsored by #[a( href="https://evilmartians.com/" ) Evil Martians]
           a.footer_lurkers( href="https://evilmartians.com/" aria-hidden="true" tabindex="-1" )
