--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -8,7 +8,7 @@ html( lang="en" )
     meta( charset="utf-8" )
     title Logux.io UI Kit
     meta( name="viewport" content="width=device-width" )
-    link( rel="icon" href="/base/favicon.svg" type="image/svg+xml" sizes="any" )
+    link( rel="icon" href="/base/favicon.svg" type="image/svg+xml" )
     link( rel="apple-touch-icon" href="/base/apple.png" )
     meta( name="apple-mobile-web-app-title" content="Logux" )
     meta( name="description" content="Logux is a client-server communication tool for collaborative web applications with optimistics UI, offline first and live updates" )
