--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -37,9 +37,7 @@ html( lang="en" )
           li
             a.menu_link( href="/recipes/authentication/" ) Recipes
           li
-            a.menu_link( href="/redux-api/" ) Redux API
-          li
-            a.menu_link( href="/vuex-api/" ) Vuex API
+            a.menu_link( href="/web-api/" ) Web API
           li
             a.menu_link( href="/node-api/" ) Node API
           li
@@ -254,8 +252,7 @@ html( lang="en" )
           h3.footer_title About
           .footer_link: a( href="/guide/" ) Guide
           .footer_link: a( href="/recipes/" ) Recipes
-          .footer_link: a( href="/redux-api/" ) Redux API
-          .footer_link: a( href="/vuex-api/" ) Vuex API
+          .footer_link: a( href="/web-api/" ) Web API
           .footer_link: a( href="/node-api/" ) Node API
           .footer_link: a( href="/protocols/" ) Protocols
           .footer_link: a( href="/branding/" ) Branding
