--- a/src/branding.pug
+++ b/src/branding.pug
@@ -21,7 +21,7 @@ article.text
   h2 Logo
   .asset
     a.asset_file( href="./logo-light.svg" download="logux-logo-light.svg" )
-      img( src="./logo.svg-light" height="150" width="150" )
+      img( src="./logo-light.svg" height="150" width="150" )
     a.asset_file( href="./logo-dark.svg"  download="logux-logo-dark.svg" )
       img.is-dark( src="./logo-dark.svg" height="150" width="150" )
   p.text_block #[a( href="https://twitter.com/antiflasher" ) Anton Lovchikov] created a logo that subtly references a #[a( href="https://www.youtube.com/watch?v=Qd8zT1YAUck" ) circular writing system] from the #[a( href="https://en.wikipedia.org/wiki/Arrival_(film)" ) Arrival] movie
