Move to Parcel 2

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -12,8 +12,8 @@ html( lang="en" )
     link( rel="apple-touch-icon" href="./base/apple.png" )
     meta( name="apple-mobile-web-app-title" content="Logux" )
     meta( name="description" content="Logux is a client-server communication tool for collaborative web applications with optimistics UI, offline first and live updates" )
-    script( defer src="./common.js" )
-    script( defer src="./switcher.js" )
+    script( defer type="module" src="./common.js" )
+    script( defer type="module" src="./switcher.js" )
     link( rel="stylesheet" href="./common.sss" )
     link( rel="stylesheet" href="./switcher.sss" )
     link( rel="stylesheet" href="./branding.sss" )
