--- a/src/edit/edit.pug
+++ b/src/edit/edit.pug
@@ -1,4 +1,4 @@
 mixin edit(url)
   .edit
     block
-    a.edit_link( href="https://github.com/logux/logux.io" title="Edit the page on GitHub" )
+    a.edit_link( href="https://github.com/logux/logux.org" title="Edit the page on GitHub" )
