--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -18,6 +18,8 @@ nav.layout_aside
       li
         a.menu_link( href="/recipes/authentication/" ) Recipes
       li
+        a.menu_link( href="/examples/pagination/" ) Examples
+      li
         a.menu_link( href="/web-api/" ) Web API
       li
         a.menu_link( href="/node-api/" ) Node API
@@ -226,6 +228,7 @@ main.layout_main#main
       h3.footer_title About
       .footer_link: a( href="/guide/" ) Guide
       .footer_link: a( href="/recipes/" ) Recipes
+      .footer_link: a( href="/examples/" ) Examples
       .footer_link: a( href="/web-api/" ) Web API
       .footer_link: a( href="/node-api/" ) Node API
       .footer_link: a( href="/protocols/" ) Protocols
