Add examples section

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -22,6 +22,8 @@ nav.layout_aside
       li
         a.menu_link( href="/node-api/" ) Node API
       li
+        a.menu_link( href="/examples/list/" ) Examples
+      li
         a.menu_link( href="/protocols/ws/spec/" ) Protocols
       li
         a.menu_link( href="/branding/" ) Branding
